# CppTransport

./: .gitignore  .gitmodules  .travis.yml  README.md  doxygen.doxconfig
CppTransport/: .travis.yml  CMakeLists.txt  CppTransport.1  IntelToolchain.cmake  LICENSE  NOTICE.txt  SPLINTER  core.h  defaults.h  input.h  main.cpp  msg_en.h  switches.h
CppTransport/Docker/: .cpptransport  .cpptransport_runtime  .profile  Dockerfile
CppTransport/Examples/dquad-openmp/: dq.h  dq.model  main.cpp
CppTransport/Examples/dquad-vexcl/: dq.h  dq.model  main.cpp
CppTransport/HTML_assets/: cpptransport.css  utility.js
CppTransport/backends/: backends.h  buffer.cpp  buffer.h  ginac_printer.h  package_group.cpp  package_group.h  package_group_factory.cpp  package_group_factory.h  replacement_rule_package.cpp  replacement_rule_package.h
CppTransport/backends/core/: core_group.cpp  core_group.h  core_macros.cpp  core_macros.h
CppTransport/backends/cpp/: cpp_backend.cpp  cpp_backend.h  cpp_cse.cpp  cpp_cse.h  cpp_macros.cpp  cpp_macros.h  cpp_printer.cpp  cpp_printer.h
CppTransport/backends/languages/: C_style_printer.cpp  C_style_printer.h  cpp_cse.h  cpp_printer.cpp  cpp_printer.h
CppTransport/backends/shared/: background.cpp  background.h  directives.cpp  directives.h  flow_tensors.cpp  flow_tensors.h  fundamental.cpp  fundamental.h  gauge_xfm.cpp  gauge_xfm.h  lagrangian_tensors.cpp  lagrangian_tensors.h  resources.cpp  resources.h  summation.cpp  summation.h  temporary_pool.cpp  temporary_pool.h  utensors.cpp  utensors.h
CppTransport/backends/utilities/: expression_types.h  ginac_cache.h  symbol_factory.h
CppTransport/backends/vexcl/: vexcl_group.cpp  (+2 more)
CppTransport/cmake/: BuildCatch.cmake  BuildDeps.cmake  BuildGiNaC.cmake  BuildJsonCPP.cmake  BuildMultiprecision.cmake  BuildOdeint.cmake  BuildSPLINTER.cmake  CompilerFlags.cmake  FindCppTransport.cmake  FindCppTransport.cmake.in  FindOpenCL.cmake
CppTransport/concepts/: filestack.cpp  filestack.h  indexorder.h  model_settings.h  stepper.h  symbol_list.h
CppTransport/configure_assets/: CppTransport-sendmail.in  FindCLN_patch.patch  build_data.h.in  tool_patch.patch
CppTransport/cpptransport-templates/: canonical_core.h  canonical_mpi.h
CppTransport/include headers/: asciitable.h  asciitable_plot_gadget.h  background.h  data_products.h  default_symbols.h  gauge_xfm_gadget.h  gnuplot_plot_gadget.h  gnuplot_plot_maker.h  index_selector.h  label_gadget.h  latex_output.h  messages_en.h  model_classes.h  plot_gadget.h  plot_maker.h  python_plot_gadget.h  python_plot_maker.h  sample_gadget.h  tensor_gadget.h  threepf.h  transport.h  twopf.h
CppTransport/instruments/: timing_instrument.h
CppTransport/old-sources/: label_gadget.h
CppTransport/parser/: Y_lexer.cpp  Y_lexer.h  finder.cpp  finder.h  input_stack.cpp  input_stack.h  lexeme.cpp  lexeme.h  lexfile.cpp  lexfile.h  lexical.h  lexstream.cpp  lexstream.h  parse_tree.cpp  parse_tree.h  quantity.cpp  quantity.h  script.cpp  script.h  semantic_data.cpp  semantic_data.h  symbol_table.h  y_common.h  y_driver.cpp  y_driver.h  y_lexer.cpp  y_lexer.h
CppTransport/runtime-api/: default_symbols.h  messages_en.h  transport.h
CppTransport/templates/: canonical_basic.h  canonical_basic_loop.h  canonical_basic_twopf.h  canonical_basic_unrolled.h  canonical_core.h  canonical_core_twopf.h  canonical_mpi.h  canonical_openmp.h  canonical_vexcl-custom.h  canonical_vexcl.h  cosmosis_getdist_latex_template.txt  cosmosis_getdist_python_template.py  cosmosis_mcmc_template.ini  cosmosis_module_template.h  cosmosis_priors_template.ini  cosmosis_values_template.ini  cpp_vexcl.cpp  cpp_vexcl.h  cpptsample_CMakeLists_template.txt  model_constructor_template.h  nontrivial_metric_core.h  nontrivial_metric_mpi.h  transport.h  vexcl-opencl-threepf.cl  vexcl-opencl-twopf.cl  vexcl-opencl-u2fused.cl  vexcl-opencl-u3fused.cl
CppTransport/test-canonical/: CMakeLists.txt  axion.model  defaults.model  test-canonical.cpp
CppTransport/test-higgs/: CMakeLists.txt  higgs_goldstone.cpp  higgs_goldstone.model
CppTransport/test-nontrivial-cosmology/: CMakeLists.txt  gelaton.model  test-nontrivial-cosmology.cpp
CppTransport/test-nontrivial-metric/: CMakeLists.txt  gelaton.model  test-nontrivial-metric.cpp
CppTransport/test-target/: CMakeLists.txt  axion.model  defaults.model  test_target.cpp
CppTransport/tests/: CMakeLists.txt
CppTransport/thirdparty-patches/: 0001-Add-CMAKE_CXX_FLAGS-for-Intel-compiler.patch
CppTransport/tools/: CMakeLists.txt  GenerateCMake.py  PackageTool.py  deploy.py
CppTransport/translator/: core.h  defaults.h  disable_warnings.h  main.cpp  msg_en.h  switches.h
CppTransport/transport objects/: canonical_u_tensor_factory.cpp  u_tensor_factory.cpp  u_tensor_factory.h  u_tensors.cpp  u_tensors.h
CppTransport/transport-objects/: canonical_u_tensor_factory.cpp  canonical_u_tensor_factory.h  make_tensor_factory.h  resource_manager.cpp  resource_manager.h  u_tensor_factory.cpp  u_tensor_factory.h
CppTransport/transport-runtime/: ansi_colour_codes.h  common.h  default_symbols.h  defaults.h  enumerations.h  exceptions.h  messages.h  transport.h  version.h
CppTransport/transport-runtime-api/: ansi_colour_codes.h  default_symbols.h  defaults.h  enumerations.h  exceptions.h  messages.h  transport.h  version.h
CppTransport/transport_objects/: canonical_u_tensor_factory.cpp  u_tensor_factory.h
CppTransport/unqlite/: unqlite.c
CppTransport/utilities/: argument_cache.cpp  argument_cache.h  basic_error.cpp  basic_error.h  cse.cpp  cse.h  cse_map.cpp  cse_map.h  error.cpp  error.h  error_context.cpp  error_context.h  filestack.cpp  filestack.h  finder.cpp  finder.h  flatten.h  formatter.cpp  formatter.h  ginac_print_indexed.cpp  ginac_print_indexed.h  index_assignment.cpp  index_assignment.h  local_environment.cpp  local_environment.h  macro.cpp  macro.h  to_printable.cpp  to_printable.h  translation_unit.cpp  translation_unit.h
Documentation/Examples/: CMakeLists.txt  dquad.cpp  dquad.model  dquad_A.cpp  dquad_B.cpp  dquad_C.cpp  dquad_D.cpp  dquad_E.cpp  plot_fNL_local.py
(+1702 files in other folders)
